[package]
name = "lorenz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.2"
rand_distr = "0.6.0"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
